# emscripten_protobuf

./: CMakeLists.txt  README.md  docker-build.sh  eproto.d.ts  eproto.js  eproto.wasm  helloworld.js  package.json  post_script.js  test.js  test_post_script.js
Dockerfiles/: Dockerfile
src/: helloworld.cpp  test_class.cpp  test_class.h
src/proto/: CMakeLists.txt
src/proto/protocol/: def.proto  gameconfignew.proto
